--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>Bookmarklet - eInvoice-ComConvert</h2>
 	<h3>Drag button to Bookmark Bar:</h3>
-	<a href="" class="bookmarklet" id="bookmarklet">eInvoice-ComConvert-1.1</a>
+	<a href="" class="bookmarklet" id="bookmarklet">eInvoice-ComConvert-1.2</a>
 </div>
 <h3><strong>Dùng để cấu hình hàng loạt 32 sang 78</strong></h3>
 <p>1. Sử dụng bookmark tại trang <a href="https://quantridichvu-hddt.vnpt-invoice.com.vn/">https://quantridichvu-hddt.vnpt-invoice.com.vn/</a></p>
@@ -369,10 +369,34 @@ function objectToFormData(obj, rootName, ignoreList) {
 
 /* Merge 2 string JSON với nhau, overwrite=false: giữ value cũ nếu trùng key */
 function JSONMerge(str1, str2, overwrite = false) {
-    str1 = str1.replace(/'/g, '"');
-    str2 = str2.replace(/'/g, '"');
-    let json1 = JSON.parse(str1);
-    let json2 = JSON.parse(str2);
+    let json1, json2;
+    try {
+        json1 = JSON.parse(str1);        
+    }
+    catch(e){};
+    if (!json1){
+        try{
+            str1 = str1.replace(/"/g, 'Δ');
+            str1 = str1.replace(/'/g, '"');
+            str1 = str1.replace(/Δ/g, "'");
+            json1 = JSON.parse(str1); 
+        }
+        catch(e){};
+    };
+    
+    try {
+        json2 = JSON.parse(str2);        
+    }
+    catch(e){};
+    if (!json2){
+        try{
+            str2 = str2.replace(/"/g, 'Δ');
+            str2 = str2.replace(/'/g, '"');
+            str2 = str2.replace(/Δ/g, "'");
+            json2 = JSON.parse(str2); 
+        }
+        catch(e){};
+    };
     let result = json1;
     for (let key in json2) {
         if (!result[key] || overwrite == true) {
