update 1.4: fix regex getTaxCode

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div>
 	<h2>Bookmarklet - eInvoice-ComConvert</h2>
 	<h3>Drag button to Bookmark Bar:</h3>
-	<a href="" class="bookmarklet" id="bookmarklet">eInvoice-ComConvert-1.3</a>
+	<a href="" class="bookmarklet" id="bookmarklet">eInvoice-ComConvert-1.4</a>
 </div>
 <h3><strong>Dùng để cấu hình hàng loạt 32 sang 78</strong></h3>
 <p>1. Sử dụng bookmark tại trang <a href="https://quantridichvu-hddt.vnpt-invoice.com.vn/">https://quantridichvu-hddt.vnpt-invoice.com.vn/</a></p>
@@ -115,7 +115,7 @@
         let str = this.comConfig['PublishDomain'].old;
         try {
             /* https://3502427224-002-democadmin.vnpt-invoice.com.vn */
-            let reg = /https:\\\/\\\/([\\\d-]+)(demo|tt78)?cadmin/g;
+            let reg = /https:\\\/\\\/([\\\d-]+)(demo|tt78|tt78demo)?cadmin/g;
             result = reg.exec(str)[1];
             if (result && result[result.length - 1] === '-') {
                 result = result.substring(0, result.length - 1).trim();
@@ -125,7 +125,7 @@
         } catch (e) { console.log("Not Token", e) }
         try {
             /* https://bqlchohuyenlongdienadmin.vnpt-invoice.com.vn */
-            let regHSM = /https:\\\/\\\/([a-z0-9]+)admin/g;
+            let regHSM = /https:\\\/\\\/([a-z0-9]+)(-tt78)?admin/g;
             result = regHSM.exec(str)[1];
             if (result != "")
                 return result;
